importing from nischayn22.in

--- a/index.html
+++ b/index.html
@@ -1,1 +1,195 @@
-Welcome
+
+    <!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>nischayn22</title>
+<meta charset="utf-8" />
+<meta name="keywords" content="nischay,nischayn22" />
+<meta name="description" content="Personal website of nischay nahata aka nischayn22" />
+<meta http-equiv="content-language" content="en" />
+<meta name="robots" content="index,follow" />
+<meta name="rating" content="general" />
+<base href="http://nischayn22.in/deadlink/" />
+<!--[if IE]>
+<script type="text/javascript" src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<link rel="stylesheet" type="text/css" href="http://widgets.hostgator.co.in/79476fd/basekitcore.css.bgz" />
+<link rel="stylesheet" type="text/css" href="http://www.hostgator.co.in/files/writeable/uploads/hostgator139114/custom-css/custom12.css" />
+<link rel="stylesheet" type="text/css" href="http://www.hostgator.co.in/files/writeable/uploads/hostgator139114/custom-css/theme178511-12.css" />
+<link rel="stylesheet" type="text/css" href="http://widgets.hostgator.co.in/79476fd/carousel_columns_columns-column_content_custom_formarea_image.css" />
+<link rel="icon" href="http://www.hostgator.co.in/files/writeable/uploads/hostgator139114/image/edited_2-018.ico" type="image/x-icon" />
+<link rel="SHORTCUT ICON" href="http://www.hostgator.co.in/files/writeable/uploads/hostgator139114/image/edited_2-018.ico?v=1341047962" type="image/x-icon" />
+<link rel="stylesheet" type="text/css" href="http://nischayn22.in/?startcss=true&ts=1340734211" />
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
+<script type="text/javascript">!window.jQuery && document.write(unescape('%3Cscript src="/libraries/jquery/jquery-1.7.1.js"%3E%3C/script%3E'))</script>
+<script type="text/javascript" src="http://widgets.hostgator.co.in/79476fd/jqueryui.js.bgz"></script>
+</head>
+<body id="bk1" class="normal theme template-content page-home">
+<script type="text/javascript"  src="http://widgets.hostgator.co.in/79476fd/basekitcore.js.bgz"></script>
+<script type="text/javascript" src="http://widgets.hostgator.co.in/79476fd/carousel_columns_columns-column_content_custom_formarea_image.js"></script>
+<div class="theme-theme-top"><!-- Theme Flex Top --></div>
+<div class="theme-theme-middle"><!-- Theme Flex Middle --></div>
+<div class="theme-theme-bottom"><!-- Theme Flex Bottom --></div>
+<section id="bk4" class="control-row theme-row-header ">
+<div class="control-row-content">
+<div id="bk5" class="bk-widget widget-columns widget-columns-4772Q9">
+<div id="bk6" class="control-zone widget-columns-column widget-columns-column-NO92DA">
+<div class="widget-columns-column-padding bk-first bk-last">
+<div id="bk7" class="bk-widget widget-columns widget-content-4L230">
+<div id="bk8" class="control-zone widget-columns-column widget-columns-column-6ICUS0">
+<div class="widget-columns-column-padding bk-first">
+<div id="bk9" class="bk-widget widget-content widget-content-446R47">
+<p style="text-align: left;"><em><br /></em></p>
+<p style="text-align: left;"><em>"<span style=
+"font-size: 18px;"><strong>The three chief virtues of a programmer
+are: Laziness, Impatience and Hubris</strong></span>."</em>&nbsp;-
+Larry Wall</p>
+<p style="text-align: left;">&nbsp;</p>
+<p style="text-align: right;">&nbsp;</p>
+<p><strong>Laziness</strong>: I'm too lazy to do the same task
+repeatedly so write scripts to do that task for me. This makes
+people think I am intelligent.</p>
+<p style="text-align: right;">&nbsp;</p>
+<p><strong>Impatience</strong>: I'm too impatient to wait for my
+code to run so rewrite the code to improve performance. This makes
+people think I am a good programmer.</p>
+<p style="text-align: right;">&nbsp;</p>
+<p><strong>Hubris</strong>: When someone asks if I can do something
+I just say Yes, then go find out how to do it (Google!). This makes
+people think I can do anything.</p>
+<p style="text-align: right;">&nbsp;</p>
+<p>Ultimately, it means I can make a career out of being Lazy,
+Impatient, and Hubristic(?).</p>
+<p style="text-align: right;"><em><strong><span style=
+"font-size: 32px;">&nbsp;&nbsp;</span></strong></em></p>
+</div>
+</div>
+</div>
+<div id="bk10" class="control-zone widget-columns-column widget-columns-column-K8F9UJ">
+<div class="widget-columns-column-padding bk-last">
+<div id="bk11" class="bk-widget widget-image widget-image-KLTACN">
+<img class="widget-image-image " src="http://www.hostgator.co.in/files/writeable/uploads/hostgator139114/image/edited_2.jpg" alt="Image description" title="" />
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id="bk12" class="control-row theme-row-feature ">
+<div class="control-row-content">
+<div id="bk13" class="bk-widget widget-columns widget-columns-2D7V5J">
+<div id="bk14" class="control-zone widget-columns-column widget-columns-column-28YZM7">
+<div class="widget-columns-column-padding bk-first">
+<div id="bk15" class="bk-widget widget-content widget-content-6O00C1">
+<h2 style="text-align: center;"><span style=
+"font-size: 64px;"><a href="http://nischayn22.wordpress.com" rel=
+"me">me.Blog()</a></span></h2>
+<p style="text-align: center;"><span style="font-size: 12px;">my
+rants!</span></p>
+</div>
+</div>
+</div>
+<div id="bk16" class="control-zone widget-columns-column widget-columns-column-11M2M2">
+<div class="widget-columns-column-padding">
+<div id="bk17" class="bk-widget widget-content widget-content-XU4KU5">
+<h2 style="text-align: center;"><span style=
+"font-size: 64px;"><a href=
+"http://mediawiki.org/wiki/User:Nischayn22" rel=
+"me">me.MW()</a></span></h2>
+<p style="text-align: center;"><span style=
+"font-size: 12px;">GSoC'12 - GreenSMW</span></p>
+</div>
+</div>
+</div>
+<div id="bk18" class="control-zone widget-columns-column widget-columns-column-8M03ZU">
+<div class="widget-columns-column-padding bk-last">
+<div id="bk19" class="bk-widget widget-content widget-content-X473G1">
+<h2 style="text-align: center;"><span style=
+"font-size: 64px;"><a href="http://github.com/nischayn22" rel=
+"me">me.Code()</a></span></h2>
+<p style="text-align: center;"><span style="font-size: 12px;">C,
+PHP, C++, Python and expanding.</span></p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id="bk20" class="control-row theme-row-main ">
+<div class="control-row-content">
+<div id="bk21" class="bk-widget widget-columns widget-columns-A9C48A">
+<div id="bk22" class="control-zone widget-columns-column widget-columns-column-4R84BY">
+<div class="widget-columns-column-padding bk-first bk-last">
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id="bk23" class="control-row theme-row-footer ">
+<div class="control-row-content">
+<div id="bk24" class="bk-widget widget-columns widget-columns-UNL75G">
+<div id="bk25" class="control-zone widget-columns-column widget-columns-column-6P3E81">
+<div class="widget-columns-column-padding bk-first">
+<div id="bk26" class="bk-widget widget-content widget-content-4QICKY">
+<p style="text-align: center;"><span style=
+"font-size: 24px;"><a href=
+"http://facebook.com/nischay.nahata">facebook</a></span></p>
+</div>
+</div>
+</div>
+<div id="bk27" class="control-zone widget-columns-column widget-columns-column-6SF8IS">
+<div class="widget-columns-column-padding">
+<div id="bk28" class="bk-widget widget-custom widget-custom-150072">
+<a href="https://twitter.com/nischayn22" class="twitter-follow-button" data-show-count="false">Follow @nischayn22</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
+</div>
+</div>
+<div id="bk29" class="control-zone widget-columns-column widget-columns-column-5H557T">
+<div class="widget-columns-column-padding">
+<div id="bk30" class="bk-widget widget-content widget-content-1LZ53I">
+<p style="text-align: center;"><a href=
+"https://plus.google.com/u/0/117076542824821926349" target=
+"_blank">Google+</a></p>
+</div>
+</div>
+</div>
+<div id="bk31" class="control-zone widget-columns-column widget-columns-column-MV83RJ">
+<div class="widget-columns-column-padding bk-last">
+<div id="bk32" class="bk-widget widget-content widget-content-1E093A">
+<p style="text-align: center;"><span style=
+"font-size: 12px;"><a href=
+"mailto:nischayn22@gmail.com">Email</a></span></p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id="bk33" class="control-row theme-row-footer2 ">
+<div class="control-row-content">
+<div id="bk34" class="bk-widget widget-columns widget-columns-J9I68T">
+<div id="bk35" class="control-zone widget-columns-column widget-columns-column-2P1U6V">
+<div class="widget-columns-column-padding bk-first bk-last">
+<div id="bk36" class="bk-widget widget-content widget-content-437O8J">
+<p style="text-align: center;"><a href="/about">about me</a></p>
+</div>
+<div id="bk37" class="bk-widget widget-content widget-content-XTFHOJ">
+<p style="text-align: right;"><span>copyrights©2012. Nischay
+Nahata</span></p>
+</div>
+<div id="bk38" class="bk-widget widget-content widget-content-V017E5">
+<p style="text-align: center;"><br /></p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<script type="text/javascript"  src="http://nischayn22.in/?startjs=true&ts=1340734211"></script>
+<img class="page-tracking-pixel" src="//d3svzs8y5qq92x.cloudfront.net/pixel.gif?b=hg_gibo&e=live" width="1" height="1" alt="" title="" />
+</body>
+</html>
